init commit, listing and adding items implemented

--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,1 +1,58 @@
+
+// Custom Theming for Angular Material
+// For more information: https://material.angular.io/guide/theming
+@use '@angular/material' as mat;
+// Plus imports for other components in your app.
+
+// Include the common styles for Angular Material. We include this here so that you only
+// have to load a single css file for Angular Material in your app.
+// Be sure that you only ever include this mixin once!
+@include mat.core();
+
+// Define the palettes for your theme using the Material Design palettes available in palette.scss
+// (imported above). For each palette, you can optionally specify a default, lighter, and darker
+// hue. Available color palettes: https://material.io/design/color/
+$expiry-tracker-front-end-primary: mat.define-palette(mat.$indigo-palette);
+$expiry-tracker-front-end-accent: mat.define-palette(mat.$pink-palette, A200, A100, A400);
+
+// The warn palette is optional (defaults to red).
+$expiry-tracker-front-end-warn: mat.define-palette(mat.$red-palette);
+
+// Create the theme object. A theme consists of configurations for individual
+// theming systems such as "color" or "typography".
+$expiry-tracker-front-end-theme: mat.define-light-theme((
+  color: (
+    primary: $expiry-tracker-front-end-primary,
+    accent: $expiry-tracker-front-end-accent,
+    warn: $expiry-tracker-front-end-warn,
+  )
+));
+
+// Include theme styles for core and each component used in your app.
+// Alternatively, you can import and @include the theme mixins for each component
+// that you are using.
+@include mat.all-component-themes($expiry-tracker-front-end-theme);
+
 /* You can add global styles to this file, and also import other style files */
+.mat-select, .input-style {
+  background-color: #F5F5F5 !important;
+  height: 50px;
+  font-size: 18px;
+}
+
+.mat-select-value{
+  margin: 30px 0 0 10px;
+  font-size: 18px;
+  color: #2B303A
+}
+.mat-select-arrow-wrapper{
+  margin: 30px 10px 0 0;
+}
+form-spacer{
+  display: block;
+  height: 10px;
+}
+
+
+html, body { height: 100%; }
+body { margin: 0; font-family: Roboto, "Helvetica Neue", sans-serif; }
