some ui changes

--- a/src/app/expiry-tracker/expiry-tracker.component.html
+++ b/src/app/expiry-tracker/expiry-tracker.component.html
@@ -10,6 +10,7 @@
 
 <body>
   <div class="content">
+    <app-delete-modal></app-delete-modal>
     <div class="row">
       <div class="add-item-container col-11 col-md-8 col-lg-4 mt-3 mx-auto">
         <app-add-items></app-add-items>
