--- a/src/app/expiry-tracker/add-items/add-items.component.html
+++ b/src/app/expiry-tracker/add-items/add-items.component.html
@@ -1,4 +1,4 @@
-<button (click)="toggleAddItems(toggleButtonText)" mat-flat-button [ngClass]="addItemToggle ? 'mat-primary' : 'mat-warn'">{{toggleButtonText}}</button>
+<button id="toggleButton" (click)="toggleAddItems(toggleButtonText)" mat-flat-button [ngClass]="addItemToggle ? 'mat-primary' : 'mat-warn'">{{toggleButtonText}}</button>
 <form [formGroup]="addItemForm" class="add-item-form" (submit)="createUpdateItem(submitButtonText)"  [hidden]="addItemToggle">
     <input type="hidden" formControlName="previousName">
     <mat-form-feild appearance="fill">
@@ -25,6 +25,6 @@
     </mat-form-field>
     <form-spacer></form-spacer>
     <div mat-dialog-actions align="center">
-        <button type="submit" mat-flat-button color="primary">{{submitButtonText}}</button>
+        <button id="submitButton" type="submit" mat-flat-button color="primary">{{submitButtonText}}</button>
     </div>    
 </form>
