--- a/src/app/expiry-tracker/list-items/list-items.component.html
+++ b/src/app/expiry-tracker/list-items/list-items.component.html
@@ -1,3 +1,11 @@
+<div class="searchWrapper">
+    <form>
+        <mat-form-feild>
+            <input type="text" placeholder="Search...">
+            <mat-icon class="mt-5" id="searchIcon">search</mat-icon>
+        </mat-form-feild>
+    </form>
+</div>
 <div class="item mb-3" *ngFor="let item of items">
     <div class="row g-0 pe-2 pt-2 pb-1">
         <div class="itemContent col-9 offset-1">
