added spinner for loading items

--- a/src/app/expiry-tracker/list-items/list-items.component.html
+++ b/src/app/expiry-tracker/list-items/list-items.component.html
@@ -39,3 +39,8 @@
     </div>
 </div>
 
+<div mat-dialog-actions align="center" [hidden]="!loading">
+  <p>Loading items...</p>
+  <mat-spinner color="primary"></mat-spinner>
+</div>    
+
