--- a/src/app/expiry-tracker/expiry-tracker.component.html
+++ b/src/app/expiry-tracker/expiry-tracker.component.html
@@ -10,7 +10,7 @@
 
 <body>
   <div class="content">
-    <mat-button-toggle-group name="fontStyle" aria-label="Font Style" value="fridge" (change)="toggleFridgeFreezer($event.value)">
+    <mat-button-toggle-group name="fontStyle" aria-label="Font Style" value="expirytracker" (change)="toggleFridgeFreezer($event.value)">
       <mat-button-toggle value="expirytracker">Fridge</mat-button-toggle>
       <mat-button-toggle value="freezertracker">Freezer</mat-button-toggle>
     </mat-button-toggle-group>
