--- a/src/app/expiry-tracker/list-items/list-items.component.html
+++ b/src/app/expiry-tracker/list-items/list-items.component.html
@@ -27,7 +27,8 @@
 
 <p *ngIf="displayFridge">Fridge</p>
 <p *ngIf="!displayFridge">Freezer</p>
-<div class="item mb-3" *ngFor="let item of items">
+<div  *ngIf="displayFridge">
+  <div class="item mb-3" *ngFor="let item of fridgeItems">
     <div class="row g-0 pe-2 pt-2 pb-1">
         <div class="itemContent col-9 offset-1">
             <p class="itemName my-0">{{item.ItemName}}</p>
@@ -40,6 +41,24 @@
             <p class="quantity mb-0 mt-4">x{{item.Quantity}}</p>
         </div>
     </div>
+</div>
+</div>
+
+<div  *ngIf="!displayFridge">
+  <div class="item mb-3" *ngFor="let item of freezerItems">
+    <div class="row g-0 pe-2 pt-2 pb-1">
+        <div class="itemContent col-9 offset-1">
+            <p class="itemName my-0">{{item.ItemName}}</p>
+            <p *ngIf="displayFridge" class="itemExpiry my-0">{{item.BestBeforeOrUseBy}}: {{item.ExpiryDate}}</p>
+            <p *ngIf="!displayFridge" class="itemDrawer my-0">Drawer: {{item.Drawer}}</p>
+        </div>
+        <div align="right" class="itemIcons col-2">
+            <mat-icon (click)="editItem(item)">edit</mat-icon>
+            <mat-icon (click)="confirmDelete(deleteItemModal, item)" color="warn">delete</mat-icon>
+            <p class="quantity mb-0 mt-4">x{{item.Quantity}}</p>
+        </div>
+    </div>
+</div>
 </div>
 
 <div mat-dialog-actions align="center" [hidden]="!loading">
