added delay to loading spinner to prevent it flashing on the screen unless it is taking longer than 200ms to load

--- a/src/app/expiry-tracker/list-items/list-items.component.html
+++ b/src/app/expiry-tracker/list-items/list-items.component.html
@@ -61,7 +61,7 @@
 </div>
 </div>
 
-<div mat-dialog-actions align="center" [hidden]="!loading">
+<div mat-dialog-actions align="center" *ngIf="displaySpinner">
   <p>Loading items...</p>
   <mat-spinner color="primary"></mat-spinner>
 </div>    
