improved local item lists, changed some styling, added collapsable drawer lists for freezer section

--- a/src/app/expiry-tracker/add-items/add-items.component.scss
+++ b/src/app/expiry-tracker/add-items/add-items.component.scss
@@ -14,3 +14,8 @@ form{
 .mat-form-field-wrapper {
     padding-bottom: 0 !important;
 }
+
+.toggleGreen{
+    background-color: #25913b;
+    color: white !important;
+}
