--- a/src/app/expiry-tracker/expiry-tracker.component.scss
+++ b/src/app/expiry-tracker/expiry-tracker.component.scss
@@ -1,6 +1,10 @@
 @import "../../styles.scss";
 
 .mat-button-toggle-checked {
-    background-color: #3F51B5;
+    background-color: #25913b;
     color: white !important;
+}
+
+.fridgeFreezerToggleButton{
+    font-weight: 450;
 }
