--- a/src/app/expiry-tracker/add-items/add-items.component.html
+++ b/src/app/expiry-tracker/add-items/add-items.component.html
@@ -1,4 +1,4 @@
-<button id="toggleButton" (click)="toggleAddItems(toggleButtonText)" mat-flat-button [ngClass]="addItemToggle ? 'mat-primary' : 'mat-warn'">{{toggleButtonText}}</button>
+<button id="toggleButton" (click)="toggleAddItems(toggleButtonText)" mat-flat-button [ngClass]="addItemToggle ? 'toggleGreen' : 'mat-warn'">{{toggleButtonText}}</button>
 <form [formGroup]="addItemForm" class="add-item-form" (submit)="createUpdateItem(submitButtonText)"  [hidden]="addItemToggle">
     <input type="hidden" formControlName="previousName">
     <mat-form-feild appearance="fill">
@@ -17,12 +17,16 @@
     <form-spacer></form-spacer>
     <mat-form-feild appearance="fill" *ngIf="!fridge">
         <label>Drawer</label>
-        <input class="input-style" formControlName="drawer" matInput>
+        <mat-select formControlName="drawer">
+            <mat-option *ngFor="let option of drawerSelect" [value]="option">
+              {{option}}
+            </mat-option>
+          </mat-select>
     </mat-form-feild>
     <form-spacer></form-spacer>
     <mat-form-feild appearance="fill">
         <label>Quantity</label>
-        <input class="input-style" formControlName="quantity" matInput>
+        <input type="number" class="input-style" formControlName="quantity" matInput>
     </mat-form-feild>
     <form-spacer></form-spacer>
     <mat-label *ngIf="fridge">Expiry Date</mat-label>
@@ -33,6 +37,6 @@
     </mat-form-field>
     <form-spacer></form-spacer>
     <div mat-dialog-actions align="center">
-        <button id="submitButton" type="submit" mat-flat-button color="primary">{{submitButtonText}}</button>
+        <button class="toggleGreen" id="submitButton" type="submit" mat-flat-button>{{submitButtonText}}</button>
     </div>    
 </form>
