--- a/src/app/expiry-tracker/add-items/add-items.component.html
+++ b/src/app/expiry-tracker/add-items/add-items.component.html
@@ -26,7 +26,7 @@
     <form-spacer></form-spacer>
     <mat-form-feild appearance="fill">
         <label>Quantity</label>
-        <input type="number" pattern="[0-9]*" class="input-style" formControlName="quantity" matInput>
+        <input type="text" pattern="[0-9]*" class="input-style" formControlName="quantity" matInput>
     </mat-form-feild>
     <form-spacer></form-spacer>
     <mat-label *ngIf="fridge">Expiry Date</mat-label>
