--- a/src/app/expiry-tracker/list-items/list-items.component.html
+++ b/src/app/expiry-tracker/list-items/list-items.component.html
@@ -28,7 +28,10 @@
 <div  *ngIf="displayFridge">
   <div class="item mb-3" *ngFor="let item of fridgeItems">
     <div class="row g-0 pe-2 pt-2 pb-1">
-        <div class="itemContent col-9 offset-1">
+      <div class="col-1">
+        <span class="dot" [ngClass]="item.itemGood ? 'dot greenDot' : 'dot'"></span>
+      </div>
+        <div class="itemContent col-8 me-auto">
             <p class="itemName my-0">{{item.ItemName}}</p>
             <p *ngIf="displayFridge" class="itemExpiry my-0">{{item.BestBeforeOrUseBy}}: {{item.ExpiryDate}}</p>
         </div>
