--- a/src/app/expiry-tracker/list-items/list-items.component.scss
+++ b/src/app/expiry-tracker/list-items/list-items.component.scss
@@ -41,6 +41,14 @@
     background-color: #DC3545 !important;
   }
 
+  .mat-select {
+    background-color: white !important;
+  }
+
+  .mat-select {
+    display: inline-block !important;
+  }
+
   @media only screen and (max-width: 600px) {
     .dot {
         height: 20px;
